--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -94,7 +94,7 @@
     </div>
     <div class="w-3/4">
       <div class="flex w-full h-[10%] bg-cyan-300">
-        <div class="p-2" (click)="tabSelected = 0">Summery</div>
+        <div class="p-2" (click)="tabSelected = 0">Summary</div>
         <div class="p-2" (click)="tabSelected = 1">Typechart</div>
         <div class="p-2" (click)="tabSelected = 2">Moves</div>
         <div class="p-2" (click)="tabSelected = 3">Find</div>
