--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-between h-screen">
+<div class="flex flex-col justify-between h-dvh">
   <header class="z-10 flex w-full border-b-2 bg-slate-300 border-slate-400 p-2">
     <div class="flex relative">
       <button
