--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -9,6 +9,17 @@
     <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
     <ul class="space-y-3">
       <li>
+        <h2 class="text-lg font-semibold">March 12th, 2024</h2>
+        <h3>
+          Got a couple of updates to share this week. Firstly, the mobile
+          experience should be significantly improved. I've revamped the layouts
+          to ensure nothing gets cut off when using a mobile device. Secondly,
+          there's an update with the speedchart. You can now filter speed by
+          modifiers. Simply look for the icon in the top right corner to adjust
+          the visible speed modifiers as needed.
+        </h3>
+      </li>
+      <li>
         <h2 class="text-lg font-semibold">March 3rd, 2024</h2>
         <h3>
           Thank you everyone for this first round of feedback and bug reporting.
