--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -42,7 +42,9 @@
     *ngIf="shared"
     class="fixed inset-0 z-30 flex flex-col items-center justify-center bg-gray-800 bg-opacity-50"
   >
-    <div class="w-1/4 p-8 bg-white rounded-lg shadow-lg">
+    <div
+      class="w-5/6 sm:w-2/3 md:w-1/2 lg:w-1/3 p-8 bg-white rounded-lg shadow-lg"
+    >
       <h1 class="text-3xl font-bold">Share your matchup</h1>
       <div class="flex items-center max-w-full mt-4">
         <div class="overflow-x-auto">
