make stats component and clean up routing

--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -38,7 +38,8 @@
       </div>
       <div class="flex" *ngIf="!archiveConfirm">
         <a
-          class="w-1/6 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
+          class="w-1/6 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          [routerLink]="'stats'"
           >Stats</a
         >
         <a
