--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -5,16 +5,16 @@
 <div
   *ngIf="teams"
   id="teams"
-  class="grid h-auto grid-flow-row grid-cols-1 overflow-auto md:grid-cols-2 lg:grid-cols-3 gap-4 p-2"
+  class="grid h-auto grid-flow-row grid-cols-1 gap-4 p-2 overflow-auto md:grid-cols-2 lg:grid-cols-3"
 >
   <div *ngFor="let team of teams">
     <div
-      class="shadow-md bg-cyan-200 shadow-cyan-600 rounded-xl h-full flex flex-col"
+      class="flex flex-col h-full shadow-md bg-cyan-200 shadow-cyan-600 rounded-xl"
     >
-      <div class="p-2 shadow-md bg-cyan-300 rounded-xl flex-grow">
+      <div class="flex-grow p-2 shadow-md bg-cyan-300 rounded-xl">
         <div class="flex w-full">
           <div
-            class="w-3/5 p-1 mx-1 flex font-semibold text-center rounded-full shadow-inner justify-center items-center text-medium bg-cyan-200 shadow-cyan-600"
+            class="flex items-center justify-center w-3/5 p-1 mx-1 font-semibold text-center rounded-full shadow-inner text-medium bg-cyan-200 shadow-cyan-600"
           >
             {{ team.leagueName }}
           </div>
@@ -39,7 +39,7 @@
       <div class="flex" *ngIf="!archiveConfirm">
         <a
           class="w-1/6 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-          [routerLink]="'stats'"
+          [routerLink]="team.leagueId + '/stats'"
           >Stats</a
         >
         <a
@@ -54,27 +54,10 @@
           >Edit
         </a>
         <a
-          class="w-1/6 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl text-cyan-500"
+          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          (click)="archive(team.leagueId)"
           >Archive
         </a>
-      </div>
-      <div class="flex" *ngIf="archiveConfirm">
-        <div
-          class="w-1/2 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-        >
-          Are you sure you want to archive?
-        </div>
-        <div
-          class="w-1/4 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-        >
-          Yes
-        </div>
-        <div
-          class="w-1/4 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-          (click)="archiveConfirm = false"
-        >
-          No
-        </div>
       </div>
     </div>
   </div>
