--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -36,7 +36,7 @@
           ></sprite>
         </div>
       </div>
-      <div class="flex" *ngIf="!archiveConfirm">
+      <div class="flex" *ngIf="!team.archiveConfirm">
         <a
           class="w-1/6 m-2 text-center shadow bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
           [routerLink]="team.leagueId + '/stats'"
@@ -55,9 +55,28 @@
         </a>
         <a
           class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
-          (click)="archive(team.leagueId)"
+          (click)="team.archiveConfirm = true"
           >Archive
         </a>
+      </div>
+      <div class="flex" *ngIf="team.archiveConfirm">
+        <div
+          class="w-2/3 m-2 text-center shadow bg-cyan-300 shadow-cyan-600 rounded-xl"
+        >
+          Are you sure you want to archive?
+        </div>
+        <div
+          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          (click)="archive(team.leagueId)"
+        >
+          Yes
+        </div>
+        <div
+          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          (click)="team.archiveConfirm = false"
+        >
+          No
+        </div>
       </div>
     </div>
   </div>
