fix leaderboard size

--- a/src/app/draft-overview/draft-stats/draft-stats.component.html
+++ b/src/app/draft-overview/draft-stats/draft-stats.component.html
@@ -1,5 +1,5 @@
 <div
-  class="p-2 border rounded-lg bg-slate-200 border-slate-300 w-fit"
+  class="p-2 border rounded-lg bg-slate-200 border-slate-300 w-fit max-w-128"
   *ngIf="teamStats.length > 0"
 >
   <div class="p-1 mx-2 text-xl font-bold text-center border-b border-slate-100">
