stat button and formatting for mobile

--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -65,13 +65,13 @@
           Are you sure you want to archive?
         </div>
         <div
-          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-1/6 m-2 justify-center items-center flex shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
           (click)="archive(team.leagueId)"
         >
           Yes
         </div>
         <div
-          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-1/6 m-2 justify-center items-center flex shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
           (click)="team.menu = 'main'"
         >
           No
@@ -106,13 +106,13 @@
           Are you sure you want to delete?
         </div>
         <div
-          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-1/6 m-2 justify-center items-center flex shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
           (click)="delete(team.leagueId)"
         >
           Yes
         </div>
         <div
-          class="w-1/6 m-2 text-center shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
+          class="w-1/6 m-2 justify-center items-center flex shadow cursor-pointer bg-cyan-300 hover:shadow shadow-cyan-600 rounded-xl"
           (click)="team.menu = 'main'"
         >
           No
