--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -88,13 +88,13 @@
                 Are you sure you want to delete?
               </div>
               <div
-                class="w-1/6 m-2 text-center bg-red-300 shadow cursor-pointer hover:shadow shadow-red-600 rounded-xl"
+                class="w-1/6 m-2 justify-center items-center flex bg-red-300 shadow cursor-pointer hover:shadow shadow-red-600 rounded-xl"
                 (click)="deleteMatchup(matchup._id)"
               >
                 Yes
               </div>
               <div
-                class="w-1/6 m-2 text-center bg-red-300 shadow cursor-pointer hover:shadow shadow-red-600 rounded-xl"
+                class="w-1/6 m-2 justify-center items-center flex bg-red-300 shadow cursor-pointer hover:shadow shadow-red-600 rounded-xl"
                 (click)="matchup.deleteConfirm = false"
               >
                 No
