--- a/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
+++ b/src/app/draft-overview/draft-form/draft-form-core/draft-form-core.component.html
@@ -4,11 +4,12 @@
   class="p-2 m-2 space-y-3 shadow-md team bg-cyan-300 shadow-cyan-600 rounded-xl"
 >
   <div class="w-full">
-    <div class="grid sm:grid-cols-4 grid-cols-2 gap-x-4">
+    <div class="grid grid-cols-2 sm:grid-cols-4 gap-x-4">
       <div>
         <label class="block mb-1 font-bold">League Name</label>
         <input
           formControlName="leagueName"
+          placeholder="Pokemon Draft League"
           class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
         />
       </div>
@@ -16,6 +17,7 @@
         <label class="block mb-1 font-bold">Team Name</label>
         <input
           formControlName="teamName"
+          placeholder="Deimos Deoxys"
           class="w-full px-4 py-2 text-base text-center rounded-full shadow-md bg-cyan-200 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:bg-cyan-100"
         />
       </div>
