--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -4,17 +4,19 @@
   class="p-2 m-2 space-y-3 bg-red-300 shadow-md team shadow-red-600 rounded-xl"
 >
   <div class="w-full">
-    <div class="grid sm:grid-cols-4 grid-cols-2 gap-x-4">
+    <div class="grid grid-cols-2 sm:grid-cols-4 gap-x-4">
       <div>
         <label class="block mb-1 font-bold">Team Name</label>
         <input
           formControlName="teamName"
+          placeholder="Deimos Deoxys"
           class="w-full px-4 py-2 text-base text-center bg-red-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-red-500 focus:bg-red-100"
         />
       </div>
       <div>
         <label class="block mb-1 font-bold">Stage</label>
         <input
+          placeholder="Week 1"
           formControlName="stage"
           class="w-full px-4 py-2 text-base text-center bg-red-200 rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-red-500 focus:bg-red-100"
         />
